app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apirestful
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apirestful
  template:
    metadata:
      labels:
        app: apirestful
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3307
      - name: apirestful
        image: eleazarerok/app-app:latest
        ports:
        - containerPort: 8080
