app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiresful-servicio
spec:
  selector:
    app: apirestful
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
