app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apirestful-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.e.corona.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apiresful-servicio
            port:
              number: 8080
